--- a/item-service/build.gradle
+++ b/item-service/build.gradle
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.0'
 	implementation 'org.hibernate.orm:hibernate-core:6.0.0.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
